--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cheerio": "^0.20.0",
     "colors": "^1.1.2",
     "moment": "^2.13.0",
+    "node-notifier": "^4.6.0",
     "request": "^2.72.0"
   }
 }
